[tool.poetry]
name = "DL-BHW-2"
version = "0.1.0"
description = "Machine Translation"
authors = ["Grigory Chaykovsky grigory.chaykovsky@gmail.com"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

torch = "2.3.1"
torchtext = "0.18.0"

tqdm = "4.66.4"
pandas = "2.2.2"
sentencepiece = "0.2.0"
wandb = "0.17.0"
sacrebleu = "2.4.2"
ipykernel = "6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
